--- a/src/pages/ReadPosts.css
+++ b/src/pages/ReadPosts.css
@@ -1,7 +1,9 @@
 .ReadPosts {
-    display: grid;
-    grid-auto-flow: row;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
+  justify-items: center;
+  gap: 30px;
+  width: 100%;
+  padding: 20px;
 }
-
