--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -12,16 +12,17 @@ body {
 }
 
 .Card {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  max-width: 400px;
-  padding: 25px 30px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 20px;
-  background: rgba(31, 41, 55, 0.5);
-  color: white;
-  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    max-width: 400px;
+    padding: 25px 30px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 20px;
+    background: rgba(31, 41, 55, 0.5);
+    color: white;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
 }
 
 .Card:hover {
